pause point.  Trying to get breadcrumbs correct.

--- a/administrator/components/com_media/resources/styles/components/_media-breadcrumb.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-breadcrumb.scss
@@ -1,14 +1,15 @@
 .media-breadcrumb {
-  display: flex;
+  display: inline-block;
   padding: 0;
   margin: 0 auto 0 0;
   font-size: .9rem;
   line-height: $toolbar-height;
   background: transparent;
   border-left: 1px solid $border-color;
+  min-width: 100vw;
 
   ol {
-    display: flex;
+    //display: flex;
     padding: 0;
     margin: 0;
     list-style: outside none none;
@@ -20,7 +21,7 @@
 }
 
 .media-breadcrumb-item {
-  padding: 0 8px 0 22px;
+  padding: 0 4px;
   background-color: $breadcrumbs-bg;
   &:first-of-type {
     padding-left: 16px;
@@ -38,21 +39,7 @@
 
 .media-breadcrumb-item {
   position: relative;
-  &::before, &::after {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 100%;
-    z-index: 2;
-    display: block;
-    width: 0;
-    height: 0;
-    margin: auto;
-    content: "" !important;
-    border-top: 23px solid transparent;
-    border-bottom: 23px solid transparent;
-    border-left: 10px solid transparent;
-  }
+
   &::before {
     border-left-color: $border-color;
   }
@@ -73,12 +60,10 @@ html[dir=rtl] .media-breadcrumb {
 
 html[dir=rtl] .media-breadcrumb-item::after, .media-breadcrumb-item::before {
   right: 100%;
-  border-right: 10px solid transparent;
-  border-left: 0;
 }
 
 html[dir=rtl] .media-breadcrumb-item {
-  padding: 0 22px 0 8px;
+  padding: 0 8px;
 }
 
 html[dir=rtl] .media-breadcrumb-item::before {
