Correct positioning of hint for Two Factor Authentication plugin

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -61,6 +61,14 @@
           font-size: .75rem;
           text-align: right;
         }
+		  
+		.form-control-hint {
+          position: absolute;
+          right: 0;
+          top: 0.3rem;
+          font-size: .75rem;
+          text-align: right;
+        }
       }
     }
   }
