fix infobar flyout

--- a/administrator/components/com_media/resources/styles/components/_media-infobar.scss
+++ b/administrator/components/com_media/resources/styles/components/_media-infobar.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   z-index: 4;
   float: none;
-  width: 25%;
+  width: 50vw;
   padding: $gutter-width;
   overflow-y: scroll;
   background-color: $info-bg;
