--- a/media/plg_installer_webinstaller/scss/client.scss
+++ b/media/plg_installer_webinstaller/scss/client.scss
@@ -1,9 +1,9 @@
 // Bootstrap functions
-@import "../../../../media/vendor/bootstrap/scss/functions";
+@import "vendor/bootstrap/scss/functions";
 
 // Bootstrap other
-@import "../../../../media/vendor/bootstrap/scss/mixins";
-@import "../../../../media/vendor/bootstrap/scss/variables";
+@import "vendor/bootstrap/scss/mixins";
+@import "vendor/bootstrap/scss/variables";
 
 // Extension variables
 $extension-types: (
