--- a/administrator/templates/atum/scss/_variables.scss
+++ b/administrator/templates/atum/scss/_variables.scss
@@ -110,21 +110,22 @@ $sidebar-width-closed:             3rem;
 $main-brand-height:                3rem;
 
 // Fonts
+$font-size-base:             	     0.875rem; // Instead of default 1rem
 $font-family-sans-serif:           "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$h1-font-size:                     1.65rem;
-$h2-font-size:                     1.5rem;
-$h3-font-size:                     1.25rem;
-$h4-font-size:                     1rem;
-$h5-font-size:                     .9286rem;
-$h6-font-size:                     .8571rem;
-$font-size-sm:                     .8rem;
-$font-size-vsm:                    .6rem;
-$display1-size:                    1rem;
-$display2-size:                    .875rem;
-$content-font-size:                .875rem;
-$label-font-size:                  1rem;
+$h1-font-size:                     ($font-size-base * 1.65);
+$h2-font-size:                     ($font-size-base * 1.5);
+$h3-font-size:                     ($font-size-base * 1.25);
+$h4-font-size:                     ($font-size-base * 1);
+$h5-font-size:                     ($font-size-base * .9286);
+$h6-font-size:                     ($font-size-base * .8571);
+$font-size-sm:                     ($font-size-base * .8);
+$font-size-vsm:                    ($font-size-base * .6);
+$display1-size:                    ($font-size-base * 1);
+$display2-size:                    ($font-size-base * .875);
+$content-font-size:                ($font-size-base * .875);
+$label-font-size:                  ($font-size-base * 1);
 $danger-bg:                        #900;
-$badge-font-size:                  .75rem;
+$badge-font-size:                  ($font-size-base * .75);
 $fa-css-prefix:                    fa;
 $fa-font-path:                     "../../../../media/vendor/fontawesome-free/webfonts";
 $roboto-font-path:                 "../../../../media/vendor/roboto-fontface/fonts";
