--- a/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
+++ b/administrator/templates/atum/scss/blocks/_sidebar-nav.scss
@@ -14,14 +14,14 @@
 
   li {
     margin-bottom: .5rem;
-    font-size: .9rem;
+    font-size: ($font-size-base * .9);
     font-weight: $font-weight-bold;
     border-bottom: solid 1px var(--atum-bg-light);
 
     &.nav-header {
       padding: .5rem 0 .2rem;
       margin-bottom: .5rem;
-      font-size: .9rem;
+      font-size: ($font-size-base * .9);
       color: var(--atum-text-dark);
       border: 0;
 
