--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -61,11 +61,11 @@
           font-size: .75rem;
           text-align: right;
         }
-		  
+
 		.form-control-hint {
           position: absolute;
-          right: 0;
-          top: 0.3rem;
+          top: .3rem;
+		  right: 0;  
           font-size: .75rem;
           text-align: right;
         }
