--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -60,7 +60,7 @@
           bottom: -1.1rem;
           font-size: .75rem;
           text-align: right;
-
+        }
 		.form-control-hint {
           position: absolute;
           top: .3rem;
