--- a/templates/cassiopeia/scss/blocks/_global.scss
+++ b/templates/cassiopeia/scss/blocks/_global.scss
@@ -55,6 +55,49 @@ a {
   }
 }
 
+.btn-group {
+  margin-bottom: $cassiopeia-grid-gutter;
+  > .input-group-append {
+    > .btn-primary {
+      @include border-right-radius($border-radius);
+      @include border-left-radius(0);
+    }
+    > .btn-secondary {
+      margin-left: $cassiopeia-grid-gutter/2;
+    }
+  }
+
+  > input {
+    padding: $cassiopeia-grid-gutter/2;
+    border: 1px solid $gray-400;
+    @include border-left-radius($border-radius);
+    @include border-right-radius(0);
+  }
+}
+
+[dir="rtl"] .btn-group {
+  > .input-group-append {
+    > .btn-primary {
+      @include border-left-radius($border-radius);
+      @include border-right-radius(0);
+    }
+
+    > .btn-secondary {
+      margin-right: $cassiopeia-grid-gutter/2;
+      margin-left: 0;
+    }
+  }
+
+  > input {
+    @include border-right-radius($border-radius);
+    @include border-left-radius(0);
+  }
+}
+
+.com-content-category__pagination {
+  margin-bottom: $cassiopeia-grid-gutter;
+}
+
 small,
 .small {
   font-size: $font-size-sm;
