added support for svg

--- a/administrator/templates/atum/scss/blocks/_login.scss
+++ b/administrator/templates/atum/scss/blocks/_login.scss
@@ -65,6 +65,10 @@
     }
   }
 
+  .plg_system_webauthn_login_button svg path {
+    fill: $white;
+  }
+
   .form-group {
     label {
       span {
