--- a/administrator/components/com_config/forms/application.xml
+++ b/administrator/components/com_config/forms/application.xml
@@ -1137,7 +1137,7 @@
 			name="cookie_samesite"
 			type="list"
 			label="COM_CONFIG_FIELD_COOKIE_SAMESITE_LABEL"
-			filter="WORD"
+			validate="options"
 			>
 			<option value="strict">COM_CONFIG_FIELD_COOKIE_SAMESITE_OPTION_STRICT_LABEL</option>
 			<option value="lax">COM_CONFIG_FIELD_COOKIE_SAMESITE_OPTION_LAX_LABEL</option>
