--- a/administrator/templates/system/scss/system.scss
+++ b/administrator/templates/system/scss/system.scss
@@ -4,4 +4,4 @@
  */
 
 /* Import project-level system CSS */
-@import url(../../../../media/system/css/system.css);
+@import '../../../../media/system/css/system';
