--- a/administrator/templates/system/scss/system.scss
+++ b/administrator/templates/system/scss/system.scss
@@ -4,4 +4,4 @@
  */
 
 /* Import project-level system CSS */
-@import '../../../../media/system/css/system';
+@import "../../../../media/system/css/system";
