Consistent default value for samesite formfield
Co-authored-by: Tobias Zulauf <zero-24@users.noreply.github.com>

--- a/administrator/components/com_config/forms/application.xml
+++ b/administrator/components/com_config/forms/application.xml
@@ -1209,6 +1209,7 @@
 			type="list"
 			label="COM_CONFIG_FIELD_COOKIE_SAMESITE_LABEL"
 			validate="options"
+			default="strict"
 			>
 			<option value="strict">COM_CONFIG_FIELD_COOKIE_SAMESITE_OPTION_STRICT_LABEL</option>
 			<option value="lax">COM_CONFIG_FIELD_COOKIE_SAMESITE_OPTION_LAX_LABEL</option>
