[Metismenu] Fix dropdown toggles and other fixes for metismenu (#195)
* No separate dropdown toggle for menu items without a link

* Remove unnecessary css change

* SCSS fixes, thanks @drmenzelit

Co-authored-by: @drmenzelit

* Fix a11y

* Fix empty titles for heading and separator menu items

* Css improvements

Add underline for button
Add margin to toggler
Add style for focus state

* Correct height of li elements in submenu

* Add underline for button on submenu (menu position)

* Don't show submenu items if they shall be hidden

* Fix underline for active menu item in sidebar

* Fix parent menu item without link in mobile view

* Fix underline on sidebar, fix height of elements

* Avoid overflow in cards

Co-authored-by: Viviana Menzel <vivianamenzel@dr-menzel-it.de>
Co-authored-by: chmst <dev@chmst.de>

--- a/templates/cassiopeia/scss/blocks/_header.scss
+++ b/templates/cassiopeia/scss/blocks/_header.scss
@@ -149,7 +149,7 @@
 
   .navbar-toggler {
     color: $white;
-    cursor: default;
+    cursor: pointer;
     border: 1px solid $white;
 
     .fas {
