--- a/templates/cassiopeia/scss/template-rtl.scss
+++ b/templates/cassiopeia/scss/template-rtl.scss
@@ -36,8 +36,10 @@ body,
 }
 
 .metismenu.mod-menu .mm-toggler {
-  margin-right: .5em;
-  margin-left: 0;
+  &:after {
+    margin-right: .5em;
+    margin-left: 0;
+  }
 }
 
 .container-header {
