[4.0] add fa Regular icons back into core availability (#31096)
* make svg's available

* change name to images

* adds regular fa fonts back

* add .far

* undo settings.json inclusion

* put atum imports in proper order

* Update _header.scss

small change to let ci run again

Co-authored-by: Robert Deutz <rdeutz@googlemail.com>

--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -1,5 +1,4 @@
 // Header
-
 .header {
   position: relative;
   z-index: $zindex-header;
@@ -176,6 +175,7 @@
     }
   }
 
+  .far,
   .fas,
   .fab {
     font-size: 1.5rem;
