--- a/administrator/templates/atum/scss/blocks/_header.scss
+++ b/administrator/templates/atum/scss/blocks/_header.scss
@@ -86,8 +86,10 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    [class^="icon-"],
-    [class^="fa-"] {
+    [class^="#{$jicon-css-prefix}-"],
+    [class*=" #{$jicon-css-prefix}-"],
+    [class^="#{$fa-css-prefix}-"],
+    [class*=" #{$fa-css-prefix}-"] {
       margin-inline-end: .625rem;
       font-size: 1rem;
     }
@@ -175,9 +177,10 @@
     }
   }
 
-  .far,
-  .fas,
-  .fab {
+  [class^="#{$jicon-css-prefix}-"],
+  [class*=" #{$jicon-css-prefix}-"],
+  [class^="#{$fa-css-prefix}-"],
+  [class*=" #{$fa-css-prefix}-"] {
     font-size: 1.5rem;
     vertical-align: middle;
     transition: all .2s ease-in-out;
@@ -198,7 +201,8 @@
     }
   }
 
-  .fa-angle-down {
+  .#{$jicon-css-prefix}-angle-down,
+  .#{$fa-css-prefix}-angle-down {
     position: absolute;
     top: .9rem;
 
@@ -238,7 +242,10 @@
         text-align: right;
       }
 
-      .fas {
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         [dir=ltr] & {
           margin-right: $dropdown-item-padding-x;
         }
@@ -258,7 +265,10 @@
       text-align: right;
     }
 
-    .fas {
+    [class^="#{$jicon-css-prefix}-"],
+    [class*=" #{$jicon-css-prefix}-"],
+    [class^="#{$fa-css-prefix}-"],
+    [class*=" #{$fa-css-prefix}-"] {
       [dir=ltr] & {
         margin-right: $dropdown-item-padding-x;
       }
@@ -327,7 +337,10 @@
       background-color: var(--atum-bg-dark);
       border: 0;
 
-      .fas {
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         margin: auto;
       }
 
@@ -405,7 +418,8 @@
       }
     }
 
-    .fa-angle-down {
+    .#{$jicon-css-prefix}-angle-down,
+    .#{$fa-css-prefix}-angle-down {
       transform: rotate(180deg);
     }
   }
