--- a/administrator/templates/atum/scss/blocks/_quickicons.scss
+++ b/administrator/templates/atum/scss/blocks/_quickicons.scss
@@ -3,7 +3,6 @@
 .quick-icons {
   background-color: $white;
 
-
   li {
     padding: 0;
   }
@@ -14,10 +13,10 @@
     text-decoration: none;
     transition: all .25s ease;
 
-
-    .far,
-    .fas,
-    .fab {
+    [class^="#{$jicon-css-prefix}-"],
+    [class*=" #{$jicon-css-prefix}-"],
+    [class^="#{$fa-css-prefix}-"],
+    [class*=" #{$fa-css-prefix}-"] {
       margin: 0 auto;
       font-size: $quickicon-icon-size;
       color: transparent;
@@ -29,22 +28,20 @@
       }
     }
 
-
     @include hover-focus-active {
       color: $white;
       text-decoration: none;
       background: var(--atum-link-color);
 
-      .far,
-      .fas,
-      .fab {
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         color: transparent;
         background: linear-gradient(var(--atum-bg-light), $white);
         background-clip: text;
       }
     }
-
-
   }
 
   // Group link to the overview and link to the edit form in a container
@@ -143,9 +140,10 @@
       &.quickicon-icon {
         margin: .8rem auto 0;
 
-        &.big .far,
-        &.big .fas,
-        &.big .fab {
+        &.big [class^="#{$jicon-css-prefix}-"],
+        &.big [class*=" #{$jicon-css-prefix}-"],
+        &.big [class^="#{$fa-css-prefix}-"],
+        &.big [class*=" #{$fa-css-prefix}-"] {
           font-size: $quickicon-icon-size-big;
         }
       }
@@ -162,7 +160,8 @@
       font-size: $display1-size;
       font-weight: $bold-weight;
 
-      > .fa-spinner {
+      > .#{$jicon-css-prefix}-spinner,
+      > .#{$fa-css-prefix}-spinner {
         font-size: $display1-size;
       }
     }
@@ -179,8 +178,10 @@
       background: var(--danger);
       border: 1px solid lighten($danger-txt, 30%);
 
-      .fas,
-      .fab {
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         color: $danger-txt;
       }
 
@@ -188,9 +189,10 @@
         color: var(--white);
         background: var(--danger);
 
-        .far::before,
-        .fas::before,
-        .fab::before {
+        [class^="#{$jicon-css-prefix}-"]::before,
+        [class*=" #{$jicon-css-prefix}-"]::before,
+        [class^="#{$fa-css-prefix}-"]::before,
+        [class*=" #{$fa-css-prefix}-"]::before {
           color: var(--white);
         }
       }
@@ -200,9 +202,10 @@
       color: var(--success);
       border: 1px solid lighten($success-txt, 20%);
 
-      .far,
-      .fas,
-      .fab {
+      [class^="#{$jicon-css-prefix}-"],
+      [class*=" #{$jicon-css-prefix}-"],
+      [class^="#{$fa-css-prefix}-"],
+      [class*=" #{$fa-css-prefix}-"] {
         color: transparent;
         background: linear-gradient(var(--success), #159c1e);
         background-clip: text;
@@ -212,9 +215,10 @@
         color: var(--white);
         background: var(--success);
 
-        .far::before,
-        .fas::before,
-        .fab::before {
+        [class^="#{$jicon-css-prefix}-"]::before,
+        [class*=" #{$jicon-css-prefix}-"]::before,
+        [class^="#{$fa-css-prefix}-"]::before,
+        [class*=" #{$fa-css-prefix}-"]::before {
           color: transparent;
           background: linear-gradient($white, lighten($green, 40%));
           background-clip: text;
